fixed btnContainer blur z-index and teleport

--- a/src/assets/scss/components/global/btnCta.scss
+++ b/src/assets/scss/components/global/btnCta.scss
@@ -58,6 +58,7 @@
             width: 100vw!important;
             height: 7dvh!important;
             backdrop-filter: blur(6px);
+            z-index:9;
             padding: 0;
                 a{
                 display: flex;
